layout inicial e campos form simulacao

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 /* Assign grid instructions to our parent grid container */
 .grid-container {
   display: grid;
-  grid-template-columns: 240px 1fr;
+  grid-template-columns: 300px 1fr;
   grid-template-rows: 50px 1fr;
   grid-template-areas:
     "sidenav header"
@@ -51,6 +51,7 @@
 .sidenav {
   grid-area: sidenav;
   background-color: #333842;
+  justify-content: start;
 }
 
 .main {
