passando parametros do form para a funcao e renderizando grafico

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
 
 .main {
   grid-area: main;
-  background-color: #6c778d;
+  background-color: #333842;
   font-size: calc(10px + 2vmin);
   color: white;
   text-align: center;
