listagem dos atributos em list do antd

--- a/src/App.css
+++ b/src/App.css
@@ -57,9 +57,9 @@
 .main {
   grid-area: main;
   background-color: #333842;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   color: white;
-  text-align: center;
+  /* text-align: center; */
   align-items: center;
   justify-content: center;
 }
